<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
   	style="@style/garden_background" >
	
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
	    android:orientation="vertical"
	    android:padding="20dp" >
	
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="190dp"
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/mole_title" />
	
	    <Button
	        android:id="@+id/new_game"
	        style="@style/button"
	        android:text="@string/new_game" />
	    
	    <Button
	        android:id="@+id/resume_game"
	        style="@style/button"
	        android:text="@string/resume_game" />
	    
	    <Button
	        android:id="@+id/profile"
	        style="@style/button"
			android:text="@string/profile" />
	    
	    <Button
	        android:id="@+id/high_scores"
	        style="@style/button"
	        android:text="@string/high_scores" />
	    
	    <Button
	        android:id="@+id/addons"
	        style="@style/button"
	        android:text="@string/addons" />
	    
	    <Button
	        android:id="@+id/about"
	        style="@style/button"
	        android:text="@string/about" />
	
	</LinearLayout>
</ScrollView>