<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"    
   	style="@style/garden_background" >
	
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
	    android:orientation="vertical"
	    android:padding="30dp" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
	
	        <ImageView
	            android:id="@+id/photo"
	            android:layout_width="80dp"
	            android:layout_height="80dp"
	            android:contentDescription="@string/photo"
	            android:gravity="center_vertical"
	            android:src="@drawable/mole" />
	
	        <TextView
	            android:id="@+id/name"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:paddingLeft="10dp"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:textSize="26dp"
	            android:textColor="#ffffff" />
	
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/lives"
	            android:gravity="center_vertical"
	            android:src="@drawable/heart" />
	        
	        <TextView
	            android:id="@+id/lives"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:paddingLeft="10dp"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:textSize="26dp"
	            android:textColor="#ffffff" />

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/bombs"
	            android:gravity="center_vertical"
	            android:src="@drawable/bomb" />
	        
	        <TextView
	            android:id="@+id/bombs"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:paddingLeft="10dp"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:textSize="26dp"
	            android:textColor="#ffffff" />

	    </LinearLayout>

	    <TextView
	        android:id="@+id/totalMoles"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:textColor="#ffffff"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <RadioGroup
	        android:id="@+id/themes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        
	        <RadioButton
	            android:id="@+id/garden"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:visibility="gone"
	            android:layout_marginTop="20dp"
		        android:text="@string/garden_theme"
		        android:textSize="26dp"
		        android:textColor="#ffffff"
		        android:onClick="changeTheme"
	            android:checked="true" />
	 
	        <RadioButton
	            android:id="@+id/circus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:visibility="gone"
	            android:layout_marginTop="20dp"
		        android:text="@string/circus_theme"
		        android:textSize="26dp"
		        android:textColor="#ffffff"
		        android:onClick="changeTheme" />
	 
	        <RadioButton
	            android:id="@+id/christmas"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:visibility="gone"
	            android:layout_marginTop="20dp"
		        android:text="@string/christmas_theme"
		        android:textSize="26dp"
		        android:textColor="#ffffff"
		        android:onClick="changeTheme" />
	        	 
	    </RadioGroup>

	    <Button
	        android:id="@+id/logout"
			style="@style/button"
 	        android:onClick="facebookLogout"
	        android:text="@string/logout" />   
	
	</LinearLayout>

</ScrollView>