<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    style="@style/garden_background" >
        
    <LinearLayout 
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:padding="30dp" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textStyle="bold"
	        android:text="@string/about"
	        android:textColor="#ffffff"
	        android:textSize="40dp" />
	    
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textStyle="bold"
	        android:text="@string/about_text1"
	        android:textColor="#ffffff"
	        android:textSize="20dp" />
	     
	     <TextView
    	    android:id="@+id/raised"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="40dp"
	        android:textStyle="bold"
	        android:textColor="#ffffff"
	        android:textSize="25dp" />

	     <ImageView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:contentDescription="@string/thebteam"
	         android:src="@drawable/thebteam" />

	</LinearLayout>

</ScrollView>
